@@ -1,3 +1,9 @@
+2015-02-12  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-art.el (gnus-article-browse-html-save-cid-content)
+	(gnus-article-browse-html-parts): Make cid file names relative if and
+	only if html doesn't specify <base> directory.
+
 2015-02-11  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-art.el (gnus-treat-buttonize): Don't re-buttonize URLs in HTML
